修改前端样式

--- a/ui-ngx/src/app/modules/home/home.component.html
+++ b/ui-ngx/src/app/modules/home/home.component.html
@@ -23,8 +23,9 @@
     <header class="tb-nav-header">
       <mat-toolbar color="primary" class="tb-nav-header-toolbar">
         <div fxFlex="auto" fxLayout="row">
-          <img [src]="logo"
+          <img [src]="logo" alt="logo"
                aria-label="logo" class="tb-logo-title"/>
+<!--          <span class="tb-logo-title">筱珈科技</span>-->
         </div>
       </mat-toolbar>
     </header>
