--- a/ui-ngx/src/app/shared/components/logo.component.html
+++ b/ui-ngx/src/app/shared/components/logo.component.html
@@ -15,5 +15,7 @@
     limitations under the License.
 
 -->
-<img (click)="gotoThingsboard()" fxFlex [src]="logo"
-         aria-label="logo" class="tb-logo-title"/>
+<!--<img (click)="gotoThingsboard()" fxFlex [src]="logo"-->
+<!--         aria-label="logo" class="tb-logo-title"/>-->
+
+<h3>筱珈数据科技IOT平台</h3>
