--- a/ui-ngx/src/theme.scss
+++ b/ui-ngx/src/theme.scss
@@ -19,9 +19,12 @@
 
 @include mat-core();
 
-$tb-primary-color: #305680;
-$tb-secondary-color: #527dad;
-$tb-hue3-color: #a7c1de;
+//$tb-primary-color: #305680;
+//$tb-secondary-color: #527dad;
+//$tb-hue3-color: #a7c1de;
+$tb-primary-color: #37474F;
+$tb-secondary-color: #78909C;
+$tb-hue3-color: #ECEFF1;
 
 $tb-dark-primary-color: #9fa8da;
 
@@ -59,7 +62,7 @@ $tb-mat-indigo: (
 );
 
 $tb-primary: mat-palette($tb-mat-indigo);
-$tb-accent: mat-palette($mat-deep-orange);
+$tb-accent: mat-palette($mat-light-blue);
 
 $background: (background: map_get($mat-grey, 200));
 
@@ -67,6 +70,7 @@ $tb-theme-background: map_merge($mat-light-theme-background, $background);
 
 $tb-mat-theme: mat-light-theme(
     $tb-primary,
+    $tb-accent,
     $tb-accent
 );
 
@@ -128,7 +132,7 @@ $tb-dark-theme-background: (
   tooltip: map_get($mat-grey, 700),
 );
 
-@function get-tb-dark-theme($primary, $accent, $warn: mat-palette($mat-red)) {
+@function get-tb-dark-theme($primary, $accent, $warn: mat-palette($mat-light-blue)) {
   @return (
     primary: $primary,
     accent: $accent,
